more details tab gap fix

--- a/agile-frontend/WebContent/flatfull/css/core/migration.css
+++ b/agile-frontend/WebContent/flatfull/css/core/migration.css
@@ -2250,7 +2250,7 @@ color:#484848!important;
  /* Safari 6.1+ (9.0 is the latest version of Safari at this time) */
 
 
-  
+.moreDetailsTab{ margin: 14px auto 0;} 
 .moreDetailsTab .panel-body{ padding: 15px;}
 .moreDetailsTab ul li{ padding:3px 7px !important; border: 1px solid #e7ecee;}
 #contact-detail-owner li{ border: 0px; padding: 0px !important;}
